# mentorbot

./: .env.example  DEPLOYMENT.md  DEVELOPMENT.md  README.md  TODO  configmap-with-secrets.yaml  docker-compose.postgres.yml  docker-compose.yml  prompts.txt  pyproject.toml  pytest.ini  run_tests.py  secret-best-practices.yaml  secret-examples.yaml  secrets-manifest.yaml  test.py  xray-config.json
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 1ada4c51d39f_unique_tg_id.py  3f3d917334a5_bool_fields_user.py  415996f573f2_init.py  56ad3d4e4a3a_conversation_data_bigger.py  8f7b59d9e5f1_add_is_ban_to_users.py  97fe759d3f3c_add_sub_until.py  c7931a6f93bc_conversation_data.py
argocd/: mentor-bot-app.yaml  mentor-bot-helm-app.yaml
helm/mentor-bot/: Chart.yaml  values.yaml
k8s/: README.md  bot.yaml  configmap.yaml  ingress.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  postgres.yaml  qdrant.yaml  redis.yaml  sealed-secrets.yaml  secret.yaml  secrets-template.yaml
k8s/production/: bot-production-patch.yaml  kustomization.yaml
scripts/: setup-secrets.sh
tests/: README.md  __init__.py  conftest.py  utils.py
tests/fixtures/: sample_data.py
tests/integration/: test_bot_workflow.py
tests/unit/: test_handlers.py  test_models.py  test_repositories.py  test_services.py
tgbot/: __main__.py  config.py  texts.py
tgbot/factory/: bot.py  dispatcher.py  runners.py
tgbot/misc/: error_handler.py  exceptions.py  logger.py  states.py
tgbot/services/: core_api.py  encryption.py  qdrantus.py  subscription.py  temp_openai.py
(+22 files in other folders)
